Add tailwind + theme

--- a/web/src/styles/app.postcss
+++ b/web/src/styles/app.postcss
@@ -1,13 +1,4 @@
-/* Global styles */
-
-html,
-body {
-  @apply h-full overflow-hidden;
-}
-
-/* Override the link styles that Skeleton's table of contents apply */
-.permalink {
-  font-size: 0.8em;
-  text-decoration: none;
-  margin-left: 0.5em;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@tailwind variants;
