--- a/web/src/styles/app.postcss
+++ b/web/src/styles/app.postcss
@@ -2,3 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 @tailwind variants;
+
+/* Need to change the scroll to be on body instead of document
+so that Skeleton TableOfContents scroll events trigger correctly */
+html {
+  height: 100%;
+  overflow: hidden; /* Prevent scrolling on the <html> element */
+}
+
+body {
+  height: 100vh; /* Full viewport height */
+  overflow-y: scroll; /* Enable vertical scrolling on the body */
+}
