mmish logo theme
Adds a new 'mmish logo and theme to the app

--- a/web/src/styles/app.postcss
+++ b/web/src/styles/app.postcss
@@ -11,6 +11,8 @@ html {
 }
 
 body {
+  @apply bg-white dark:bg-surface-800;
+
   height: 100vh; /* Full viewport height */
   overflow-y: scroll; /* Enable vertical scrolling on the body */
 }
